--- a/frontend/templates/employee/employee-shifts.html
+++ b/frontend/templates/employee/employee-shifts.html
@@ -102,7 +102,7 @@
     </div>
   </div>
   
-	  <script type="application/json" id="employeeShiftsData">{{ shifts_json|safe }}</script>
+	  <script type="application/json" id="employeeShiftsData"> </script>
 	  <div
 	    id="employeeShiftPage"
     data-view="{{ view }}"
