--- a/frontend/templates/manager/manager-shifts.html
+++ b/frontend/templates/manager/manager-shifts.html
@@ -67,7 +67,7 @@
               <label class="form-label mb-0">Show:</label>
               <select name="show" onchange="submitFilters()" class="form-select">
                 <option value="" {% if not understaffed %}selected{% endif %}>All</option>
-                <option value="understaffed" {% if understaffed %}selected{% endif %}>Understaffed only</option>
+                <option value="understaffed" {% if understaffed %}selected{% endif %}>Understaffed</option>
               </select>
             </div>
           </form>
